--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 /* Generic context menu styles */
 #dtable_context_menu {
 	position: absolute;
-	/*For funthure options*/
-	/*width: 340px;*/
-	width: 140px;
+	width: 13em;
 	z-index: 99999;
 	border: solid 1px #CCC;
 	background: #EEE;
